# weadr

./: Cargo.toml
src/: client.rs  dtos.rs  main.rs
